--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "axios": "^1.7.6",
+    "moment": "^2.30.1",
     "react": "18.3.1",
     "react-native": "0.75.2",
     "react-native-gesture-handler": "^2.18.1",
     "react-native-maps": "^1.18.0",
+    "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.34.0",
+    "react-native-svg": "^15.6.0",
     "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
@@ -37,6 +41,7 @@
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.3.1",
     "typescript": "5.0.4"
   },
