--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.3.1",
     "react-native": "0.75.2",
     "react-native-gesture-handler": "^2.18.1",
+    "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-maps": "^1.18.0",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.12.5",
